# python-project-50

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pyci.yaml
gendiff/: .gendiff.py.swp  .output_stylish.py.swp  .parse.py.swp  __init__.py  gendiff.py  output.py  output_json.py  output_plain.py  output_stylish.py  parse.py
gendiff/output/: output_json.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: result_json_json.txt
